--- a/reactapp/src/pages/misc/errorpage.css
+++ b/reactapp/src/pages/misc/errorpage.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
 }
-
+/* Random */
 .misc-page > h1 {
   margin-bottom: 10%;
   background-color: var(--white);
